fix: stretch page to screen height

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@
   margin: 0;
   padding: 0;
   min-width: 320px;
+  background-color: var(--color-background-darkgrey);
+}
+
+.page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 960px) {
